data/derived/comb/progs/unify/prog1783.ml.out
Characters 69-75:
  if c' then wwhile (f b') else b';;
                    ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type ('a -> 'a * bool) * 'a
